alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_1.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid first character of package name
 | 
 | #invalid-name: this is an example dependency
 | ^ expected one of: ASCII alphanumeric character, `_`, `@`, `+`
 | 
 = while parsing:
   optional dependency: (#invalid-name: this …)
   └ alpm-package-name: (#invalid-name: this …)
     → invalid first character of package name
     → expected one of: ASCII alphanumeric character, `_`, `@`, `+`
