alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_2.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid first character of package name
 | 
 | : no_name_colon
 | ^ expected one of: ASCII alphanumeric character, `_`, `@`, `+`
 | 
 = while parsing:
   optional dependency: (: no_name_colon)
   └ alpm-package-name: (: no_name_colon)
     → invalid first character of package name
     → expected one of: ASCII alphanumeric character, `_`, `@`, `+`
