alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_3.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid dependency delimiter in optional dependency
 | 
 | name:description with no leading whitespace
 | ~~~~~^ expected A colon followed by a whitespace ': '
 | 
 = while parsing:
   optional dependency: (name:description wit…)
   → invalid dependency delimiter in optional dependency
   → expected A colon followed by a whitespace ': '
