alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_1.snap
---
source: alpm-types/src/relation/composite.rs
---
error: invalid shared library prefix delimiter
 | 
 | libexample.so.1
 | ~~~~~~~~~~~~~~~^ expected the prefix delimiter `:`
 | 
 = while parsing:
   alpm-sonamev2: (libexample.so.1)
   → invalid shared library prefix delimiter
   → expected the prefix delimiter `:`
