alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_2.snap
---
source: alpm-types/src/relation/composite.rs
---
lib:libexample.so-abc
                 ^
invalid version delimiter
expected version delimiter `.`
