alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_3.snap
---
source: alpm-types/src/relation/composite.rs
---
lib:libexample.so.10-10
                  ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace character
