alpm-types/src/relation/snapshots/composite::invalid_sonamev2_parser@case_4.snap
---
source: alpm-types/src/relation/composite.rs
---
lib:libexample.so.1.0.0-64
                  ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace character
