alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_1.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid suffix
 | 
 | noso
 | ~~~~^ expected shared object name suffix '.so'
 | 
 = while parsing:
   alpm-sonamev1: (noso)
   └ shared object name: (noso)
     → invalid suffix
     → expected shared object name suffix '.so'
