alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_2.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid architecture delimiter
 | 
 | invalidversion.so=1🐀2-64
 | ~~~~~~~~~~~~~~~~~~~^ expected architecture delimiter `-`
 | 
 = while parsing:
   alpm-sonamev1: (invalidversion.so=1🐀…)
   → invalid architecture delimiter
   → expected architecture delimiter `-`
