alpm-types/src/relation/snapshots/soname::invalid_sonamev1_parser@case_3.snap
---
source: alpm-types/src/relation/soname.rs
---
error: invalid architecture delimiter
 | 
 | nodelimiter.so=1.64
 | ~~~~~~~~~~~~~~~~~~~^ expected architecture delimiter `-`
 | 
 = while parsing:
   alpm-sonamev1: (nodelimiter.so=1.64)
   → invalid architecture delimiter
   → expected architecture delimiter `-`
